# blogamer

./: Cargo.toml
example/posts/: hello.md
example/posts/image/: index.md
src/: lib.rs  main.rs
templates/: post.html  theme.css
